# Pylos

./: README.md
client/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
client/classes/: typed_set.ts
client/components/: arena.tsx  canvas.tsx  spheres.tsx
client/components/interface/: header.tsx  menu.tsx  play.tsx  profile-tab.tsx  pylos_rules.tsx
client/components/ui/: accordion.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx  slider.tsx  table.tsx  tabs.tsx
client/public/models/: pylos.blend  pylos.glb
client/src/: App.tsx  Shoe.jsx  index.tsx  styles.css
client/src/components/: arena.tsx  canvas.tsx  platform.tsx
client/src/contexts/: ws-context.tsx
client/src/hooks/: local-storage.ts
client/src/types/: ball.ts  board.ts  index.ts  request.ts  response.ts  typed_map.ts
client/src/util/: default-names.ts  range.ts  uuid.ts
client/types/: ball.ts  coord.ts  index.ts  player.ts
client/util/: cart.ts
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
server/src/board/: ai.rs  ball.rs  board_side.rs  board_state.rs  index.rs  mod.rs  player_side.rs
server/src/game/: client.rs  game.rs  game_description.rs
server/src/logic/: ai.rs  amove.rs  ball.rs  board.rs  board_side.rs  index.rs  mod.rs  player_side.rs
server/src/protocol/: html.rs  mod.rs  request.rs  response.rs  result.rs  ws.rs
server/src/state/: client.rs  game.rs  game_configuration.rs  game_description.rs  game_meta.rs  game_uuid.rs  mod.rs  user_uuid.rs
(+27 files in other folders)
